# ouisync

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONFLICT_RESOLUTION_COMPLETE.md  CROSS_COMPILATION.md  Cargo.toml  Cross.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MULTI_DIR_SYNC_IMPLEMENTATION.md  NEXT_STEPS.md  PROGRESS_UPDATE.md  README.md  WARP.md  build.rs
api_parser/: Cargo.toml
api_parser/src/: lib.rs  parse.rs
bindgen/: Cargo.toml  README.md
bindgen/src/: dart.rs  main.rs  parse.rs
bindings/cpp/: .clangd  .gitignore  CMakeLists.txt  README.md  custom_output.sh  doxygen.conf  ouisync.hpp
bindings/cpp/cmake/: measure_build_time.sh
bindings/cpp/example/: CMakeLists.txt  main.cpp
bindings/cpp/examples/: main.cpp
bindings/cpp/ouisync/: api.g.cpp  api.g.hpp  client.cpp  client.hpp  data.g.cpp  data.g.hpp  data.hpp  data_dsc.g.hpp  data_dsc.hpp  debug.hpp  describe.hpp  error.cpp  error.hpp  file_stream.cpp  file_stream.hpp  handler.hpp  lib_api.hpp  message.g.cpp  message.g.hpp  message.hpp  message_dsc.g.hpp  message_dsc.hpp  semaphore.hpp  serialize.cpp  serialize.hpp  service.cpp  service.hpp  subscriber_id.hpp  subscription.cpp  subscription.hpp  subscriptions.cpp  subscriptions.hpp  utils.hpp
bindings/cpp/tests/: CMakeLists.txt  test_cancellation.cpp  test_copy.cpp  test_dht.cpp  test_file.cpp  test_network_sockets.cpp  test_serialize.cpp  test_subscriptions.cpp  test_utils.cpp  test_utils.hpp
bridge/: Cargo.toml
bridge/src/: client_message.rs  config.rs  constants.rs  device_id.rs  dht_contacts.rs  directory.rs  error.rs  file.rs  lib.rs  network.rs  registry.rs  repository.rs  server.rs  server_message.rs  share_token.rs  socket.rs  state.rs  state_monitor.rs
bridge/src/logger/: android.rs  common.rs  default.rs  mod.rs  redirect.rs
bridge/src/protocol/: client.rs  mod.rs  remote.rs  server.rs
bridge/src/transport/: foreign.rs  local.rs  mod.rs  native.rs  remote.rs  socket.rs  tls.rs  utils.rs
bridge/tests/: tests.rs
cli/: Cargo.toml  README.md
cli/src/: async_walkdir.rs  client.rs  defaults.rs  error.rs  format.rs  geo_ip.rs  handler.rs  host_addr.rs  local_secret.rs  main.rs  metrics.rs  migration.rs  options.rs  path.rs  protocol.rs  repository.rs  server.rs  state.rs  utils.rs
cli/src/handler/: local.rs  mod.rs  remote.rs
cli/src/transport/: local.rs  mod.rs  native.rs  remote.rs
cli/src/virtual_filesystem/: entry_map.rs  inode.rs  mod.rs  open_flags.rs  tests.rs  utils.rs
cli/tests/: cli.rs  copy.rs  tests.rs  utils.rs
deadlock/: Cargo.toml
deadlock/src/: async_mutex.rs  expect_short_lifetime.rs  lib.rs  timer.rs
ffi/: Cargo.toml
ffi/src/: c.rs  client_message.rs  constants.rs  dart.rs  directory.rs  error.rs  file.rs  handler.rs  interface.rs  lib.rs  listener.rs  log.rs  mounter.rs  network.rs  protocol.rs  registry.rs  repository.rs  request.rs  sender.rs  server.rs  server_message.rs  session.rs  share_token.rs  socket.rs  state.rs  state_monitor.rs  transport.rs  utils.rs
ffi/src/logger/: android.rs  default.rs  mod.rs
fs_util/: Cargo.toml
fs_util/src/: lib.rs  safe_move.rs  same_content.rs  walk_dir.rs
lib/: Cargo.toml  build.rs
lib/benches/: basic.rs  bench.rs  bench_large_file.rs  bench_lib.rs  bench_swarm.rs  swarm.rs
lib/benches/utils/: mod.rs  summary.rs
lib/src/: blob_id.rs  block_tracker.rs  branch.rs  collections.rs  config.rs  conflict.rs  db.rs  deadlock.rs  debug.rs  device_id.rs  error.rs  event.rs  file.rs  format.rs  future.rs  joint_entry.rs  lib.rs  locator.rs  macros.rs  master_key.rs  metadata.rs  metrics.rs  progress.rs  replica_id.rs  repository.rs  repository_stats.rs  scoped_task.rs  share_token.rs  single_value_config.rs  state_monitor.rs  storage_size.rs  store.rs  sync.rs  test_utils.rs  this_replica.rs  this_writer.rs  time.rs  timing.rs  version_vector.rs  versioned.rs  (+1 more)
lib/src/access_control/: access_mode.rs  local_secret.rs  master_secret.rs  mod.rs  share_token.rs  writer_request.rs
lib/src/blob/: block_ids.rs  buffer.rs  cache.rs  core.rs  id.rs  inner.rs  lock.rs  mod.rs  open_block.rs  operations.rs  pin.rs  position.rs  tests.rs
lib/src/block/: mod.rs  (+2 more)
lib/tests/: connectivity.rs  gc.rs  malice.rs  migration.rs  misc.rs  network.rs  sim.rs  sync.rs  tests.rs
logtee/rust/: Cargo.toml
metrics_ext/: Cargo.toml
metrics_ext/src/: add_labels.rs  influxdb.rs  lib.rs  pair.rs  shared.rs  watch_recorder.rs
net/: Cargo.toml
net/examples/: peer.rs  stun.rs
net/src/: bus.rs  connection.rs  lib.rs  mock.rs  quic.rs  socket.rs  stun.rs  sync.rs  tcp.rs  test_utils.rs  udp.rs  unified.rs
rand/: Cargo.toml
rand/src/: lib.rs
service/: Cargo.toml  build.rs  cbindgen.toml
service/doc/: repository.md
service/src/: any_entry.rs  async_counter.rs  config_keys.rs  config_list.rs  config_migration.rs  config_store.rs  conflict.rs  connection.rs  coop_rw_lock.rs  device_id.rs  dht.rs  dht_contacts.rs  error.rs  error_code.rs  ffi.rs  file.rs  futures_map.rs  lib.rs  metrics.rs  network.rs  protocol.rs  repository.rs  share.rs  share_api.rs  share_config.rs  socket.rs  state.rs  stream.rs  subscription.rs  sync_bridge.rs  test_utils.rs  tls.rs  transport.rs
service/tests/: README.md  conflict_integration_test.rs  share_integration_test.rs
state_monitor/: Cargo.toml
state_monitor/src/: lib.rs  metrics.rs
test/: CMakeLists.txt  cryfs.cpp  objcat.cpp  objects.cpp  test-blob.cpp  test-file.cpp  test-objects.cpp  test-snapshot.cpp  test-utils.cpp  utils.h  version-vector.cpp
tracing_fmt/: Cargo.toml
tracing_fmt/src/: lib.rs
util/: Cargo.toml
util/src/: btdht.rs
utils/benchtool/: Cargo.toml
utils/bindgen/: Cargo.toml
utils/btdht/: Cargo.toml
utils/local-discovery/: Cargo.toml
utils/protocol-analyzer/: Cargo.toml
utils/repo-tool/: Cargo.toml
utils/repogen/: Cargo.toml
utils/shadow-runner/: Cargo.toml
utils/stress-test/: Cargo.toml
vfs/: Cargo.toml
vfs/benches/: bench_vfs.rs
vfs/src/: dokan_impl.rs  dummy.rs  dummy_multi_repo_mount.rs  entry_map.rs  fuse.rs  inode.rs  lib.rs  open_flags.rs  tests.rs
(+1030 files in other folders)
