[workspace]
members = [
    "bridge",
    "cli",
    "deadlock",
    "ffi",
    "lib",
    "metrics_ext",
    "net",
    "rand",
    "scoped_task",
    "state_monitor",
    "tracing_fmt",
    "utils/bindgen",
    "utils/btdht",
    "utils/repogen",
    "utils/repo-tool",
    "utils/stress-test",
    "utils/stun-server-list",
    "utils/swarm",
    "utils/protocol-analyzer",
    "vfs",
    "utils/repogen",
    "utils/benchtool"
]
resolver = "2"

[workspace.package]
version = "0.8.11"
authors = ["Adam Cigánek <adam@equalit.ie>", "Peter Jankuliak <peter@equalit.ie>"]
repository = "https://github.com/equalitie/ouisync"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.77.1"

[workspace.dependencies]
anyhow = "1.0.86"
assert_matches = "1.5"
async-trait = "0.1.73"
btdht = { git = "https://github.com/equalitie/btdht.git", rev = "e7ddf5607b20f0b82cbc3ea6259425c00bd8d16b" }
bytes = "1.5.0"
camino = "1.1.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
clap = { version = "4.4.6", features = ["derive"] }
futures-util = { version = "0.3.30", default-features = false }
metrics = "0.22.0"
metrics-exporter-prometheus = { version = "0.13.0", default-features = false }
metrics-util = { version = "0.16.0", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
once_cell = "1.18.0"
rand = { package = "ouisync-rand", path = "rand" }
rcgen = { version = "0.11.3", default-features = false }
rmp-serde = "1.1.0"
rustls = { version = "0.21.0", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11.8"
serde_json = "1.0.94"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3.2"
thiserror = "1.0.49"
tokio = { version = "1.38.0", default-features = false }
tokio-rustls = "0.24.1"
tokio-stream = { version = "0.1.15", default-features = false }
tokio-util = "0.7.11"
tracing = { version = "0.1.38" }
tracing-subscriber = { version = "0.3.18" }
turmoil = "0.6.1"

[profile.bench]
# Enable debug info so we can profile the benches
debug = 1

# Build dependencies with optimizations even in dev mode
[profile.dev.package."*"]
opt-level = 3

