[workspace]
members = [
    "api_parser",
    "cli",
    "deadlock",
    "fs_util",
    "lib",
    "logtee/rust",
    "macros",
    "metrics_ext",
    "net",
    "rand",
    "scoped_task",
    "service",
    "state_monitor",
    "tracing_fmt",
    "utils/benchtool",
    "utils/bindgen",
    "utils/btdht",
    "utils/protocol-analyzer",
    "utils/repogen",
    "utils/repo-tool",
    "utils/stress-test",
    "utils/stun-server-list",
    "utils/swarm",
    "vfs",
]

resolver = "3"

[workspace.package]
version = "0.9.3"
authors = ["Adam Cigánek <adam@equalit.ie>", "Peter Jankuliak <peter@equalit.ie>"]
repository = "https://github.com/equalitie/ouisync"
license = "MPL-2.0"
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
anyhow = "1.0.100"
assert_matches = "1.5"
async-trait = "0.1.89"
btdht = { git = "https://github.com/equalitie/btdht.git", rev = "f8a141ded45e4a44eed89b5ab67d03816c43559d" }
bytes = "1.11.0"
camino = "1.2.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8.1"
futures-util = { version = "0.3.31", default-features = false }
heck = "0.5.0"
hex = "0.4.3"
hex_fmt = "0.3.0"
hmac = { version = "0.12.1", default-features = false }
indexmap = "2.12.1"
libc = "0.2.174"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
metrics-util = { version = "0.20.1", default-features = false }
num_enum = { version = "0.7.5", default-features = false }
pem = "3.0.6"
pin-project-lite = "0.2.16"
proptest = "1.9.0"
rand = { package = "ouisync-rand", path = "rand" }
rcgen = "0.14.5"
reqwest = { version = "0.12.25", default-features = false }
rmp = "0.8.14"
rmp-serde = "1.3.0"
rustls = { version = "0.23.35", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
sha2 = { version = "0.10.8", default-features = false }
similar-asserts = "1.7.0"
slab = "0.4.11"
sqlx = { version = "0.8.4", default-features = false, features = ["derive", "runtime-tokio", "sqlite"] }
syn = { version = "2.0.111", default-features = false }
tempfile = "3.23.0"
test-strategy = "0.4.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
tokio-rustls = { version = "0.26.4", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = "0.7.17"
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22" }
turmoil = "0.7.0"
webpki-roots = "1.0.4"
winapi = { version = "0.3.9" }

[profile.bench]
# Enable debug info so we can profile the benches
debug = 1

# Build dependencies with optimizations even in dev mode
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# The upstream has outdated dependency on `bindgen` which conflicts with some of our other
# dependencies. Using this fork until the upstream updates.
xpc-connection-sys = { git = "https://github.com/madadam/xpc-connection-rs" }

[workspace.lints.clippy]
large_enum_variant = "allow"
result_large_err   = "allow"

