[package]
name = "ouisync-api-parser"
description = "Parse Ouisync rust codebase to generate input for codegen"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
heck            = { workspace = true }
syn             = { workspace = true, features = ["extra-traits",  "full", "parsing", "printing"] }

[dev-dependencies]
assert_matches  = { workspace = true }
