[package]
name = "ouisync-bindgen"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "bindgen"
path = "src/main.rs"

[dependencies]
cbindgen = "0.20.0"
env_logger = "0.10.0"
