[package]
name = "ouisync-bridge"
description = "Secure P2P file sharing (backend - frontend bridge library)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
file-rotate = "0.7.5"
futures-util = { workspace = true }
indexmap = "1.9.3"
num_enum = { workspace = true }
os_pipe = { version = "1.1.4", features = ["io_safety"] }
ouisync-lib = { package = "ouisync", path = "../lib" }
rand = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.94"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.23.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webpki-roots = "0.22.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.3.0"
log = "0.4.17"
once_cell = { workspace = true }
paranoid-android = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "processenv", "winbase"] }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3.2"
