[package]
name = "ouisync-bridge"
description = "Secure P2P file sharing (backend - frontend bridge library)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ansi_term = "0.12.1"
async-trait = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
file-rotate = "0.7.5"
futures-util = { workspace = true }
indexmap = "1.9.3"
num_enum = { workspace = true }
ouisync-lib = { package = "ouisync", path = "../lib" }
rand = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.94"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.23.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki-roots = "0.22.6"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2.147"
ndk-sys = "0.3.0"
once_cell = { workspace = true }
os_pipe = { version = "1.1.4", features = ["io_safety"] }
paranoid-android = "0.2.1"

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3.2"
