[package]
name = "ouisync-bridge"
description = "Secure P2P file sharing (backend - frontend bridge library)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ansi_term = "0.12.1"
async-trait = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
deadlock = { path = "../deadlock" }
file-rotate = "0.7.5"
futures-util = { workspace = true }
indexmap = { workspace = true }
num_enum = { workspace = true }
ouisync-lib = { package = "ouisync", path = "../lib" }
ouisync-tracing-fmt = { path = "../tracing_fmt" }
pem = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
state_monitor = { path = "../state_monitor" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
webpki-roots = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2.147"
ndk-sys = "0.6.0"
os_pipe = { version = "1.1.4", features = ["io_safety"] }
paranoid-android = "0.2.1"

[dev-dependencies]
assert_matches = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }
