[package]
name = "ouisync-cli"
description = "Secure P2P file sharing (command-line interface)"
default-run = "ouisync"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ouisync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
async-trait = { workspace = true }
bytes = "1.4.0"
camino = { workspace = true }
clap = { version = "4.1.8", features = ["derive"] }
dirs = "4.0.0"
futures-util = { workspace = true }
hyper = { version = "0.14.27", features = ["server", "http1", "http2"] }
hyper-rustls = { version = "0.24.1", default-features = false, features = ["acceptor"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
maxminddb = "0.23.0"
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false }
ouisync-bridge = { path = "../bridge" }
ouisync-lib = { package = "ouisync", path = "../lib" }
ouisync-vfs = { path = "../vfs" }
pem = "2.0.1"
rustls = { workspace = true }
scoped_task = { path = "../scoped_task" }
serde = { workspace = true }
tokio = { workspace = true, features = ["signal", "io-std"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "compat"] }
tracing = { workspace = true }
walkdir = "2.3.3"

[dev-dependencies]
backoff = "0.4.0"
hex = "0.4.3"
once_cell = { workspace = true }
rand = "0.8.5"
rcgen = { workspace = true, features = ["pem"] }
tempfile = "3.2"

[target.'cfg(any(target_os = "linux", target_os = "osx"))'.dev-dependencies]
libc = "0.2.126"
