[package]
name = "ouisync-cli"
description = "Secure P2P file sharing (command-line interface)"
default-run = "ouisync"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ouisync"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
dirs = "5.0.1"
fs_util = { path = "../fs_util" }
futures-util = { workspace = true }
ouisync = { path = "../lib" }
ouisync-service = { path = "../service" }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "io-std"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
backoff = "0.4.0"
hex = "0.4.3"
rcgen = { workspace = true, features = ["pem"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
libc = { workspace = true }
