[package]
name = "ouisync-ffi"
description = "Secure P2P file sharing (foreign function interface)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
camino = { version = "1.0.9", features = ["serde1"] }
futures-util = { workspace = true }
hex = "0.4.3"
ouisync-lib = { package = "ouisync", path = "../lib" }
rmp-serde = "1.1.0"
scoped_task = { path = "../scoped_task" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = "0.18.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.3.0"
libc = "0.2.126"
log = "0.4.17"
once_cell = "1.9.0"
os_pipe = "0.9.2"
paranoid-android = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }