[package]
name = "ouisync-ffi"
description = "Secure P2P file sharing (foreign function interface)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ouisync-bridge = { path = "../bridge" }
ouisync-lib = { package = "ouisync", path = "../lib" }
scoped_task = { path = "../scoped_task" }
tokio = { workspace = true }
tracing = { workspace = true }

