[package]
name = "ouisync-ffi"
description = "Secure P2P file sharing (foreign function interface)"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
futures-util = { workspace = true }
hex = "0.4.3"
once_cell = { workspace = true }
ouisync-bridge = { path = "../bridge" }
ouisync-lib = { package = "ouisync", path = "../lib" }
ouisync-vfs = { path = "../vfs" }
rustls = { workspace = true }
scoped_task = { path = "../scoped_task" }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
