[package]
name = "fs_util"
description = "Asynchronous filesystem utilities"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version = "0.1.0"

[dependencies]
futures-util = { workspace = true }
tokio        = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
tokio-stream = { workspace = true }
walkdir      = "2.5.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc         = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi       = { workspace = true, features = ["winbase"] }

[dev-dependencies]
tempfile     = { workspace = true }
tokio        = { workspace = true, features = ["macros"] }
