[package]
name = "ouisync-net"
description = "Low-level networking utilities"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytecodec          = "0.4.15"
bytes              = "1.1.0"
futures-util       = { workspace = true }
hex_fmt            = { workspace = true }
pin-project-lite   = { workspace = true }
quinn              = "0.11.4"
rand               = { package = "ouisync-rand", path = "../rand" }
rcgen              = { workspace = true }
slab               = { workspace = true }
socket2            = "0.5.7" # To be able to setsockopts before a socket is bound
stun_codec         = "0.3.4"
thiserror          = "1.0.31"
tokio              = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-util         = { workspace = true, features = ["compat"] }
tracing            = { workspace = true }
turmoil            = { workspace = true, optional = true }
yamux              = "0.13.3"

[dev-dependencies]
anyhow             = { workspace = true }
assert_matches     = { workspace = true }
clap               = { workspace = true }
itertools          = "0.13.0"
proptest           = { workspace = true }
similar-asserts    = { workspace = true }
test-strategy      = { workspace = true }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
simulation = ["turmoil"]
